--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.4.2",
     "typescript": "^5.2.2",
     "validator": "^13.6.0"
@@ -42,6 +44,7 @@
     "@types/node": "^16.18.122",
     "@types/node-cron": "^3.0.11",
     "@types/sequelize": "^4.28.10",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.6.3",
     "jest": "^29.7.0",
     "sequelize-cli": "^6.6.2",
