--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     },
 
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true                                
+    "skipLibCheck": true,
+    "resolveJsonModule": true                           
   }
 }
