--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "fibonacci": "^1.6.11",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.18",
     "mod-api": "file:",
